# ERPNext-Project

./: .gitignore  AI_USAGE_LOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
pharmacy_app/: api.py  hooks.py  modules.txt  patches.txt
pharmacy_app/config/: desktop.py  docs.py
pharmacy_app/doctype/agency/: agency.py  agency_item.json
pharmacy_app/doctype/manufacturer/: manufacturer.py  manufacturer_item.py
pharmacy_app/pharmacy_app/: api.py  utils.py
pharmacy_app/pharmacy_app/doctype/: __init__.py
pharmacy_app/pharmacy_app/doctype/agency/: __init__.py  agency.json  agency.py
pharmacy_app/pharmacy_app/doctype/manufacturer/: __init__.py  manufacturer.json  manufacturer_item.json
pharmacy_app/pharmacy_app/report/items_by_manufacturer/: report.json
pharmacy_app/pharmacy_app/scripts/: demo_setup.py
pharmacy_app/public/js/: agency.js  agency_list.js  manufacturer.js
pharmacy_app/report/agency_lead_times/: agency_lead_times.py  report.json
pharmacy_app/report/items_by_manufacturer/: items_by_manufacturer.py
pharmacy_app/scripts/: demo_setup.py
